--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,51 @@
-<h1>Ronal Orellana</h1>
+<h1>Welcome to the CSE Motors!</h1>
+<img src="../images/vehicles/delorean.jpg" alt="Hero-img" id="hero-img">
+<div id="hero-text">
+    <h3>DMC Delorean</h3>
+    <p>3 cup holders</p>
+    <p>Superman Doors</p>
+    <p>Fuzzy Dicel</p>
+    <button>Own Today</button>
+</div>
+<div id="info">
+    <div id="reviews">
+        <h2>DMC Delorean Reviews</h2>
+        <ol>
+            <li>"So fast it's almost like traveling in time." (4/5)</li>
+            <li>"Coolest ride on the road". (4/5)</li>
+            <li>"I'm feeling McFly!." (5/5)</li>
+            <li>"The most futuristic ride of our day." (4.5/5)</li>
+            <li>"80's livin and love it" (5/5)</li>
+        </ol>
+    </div>
+    <div id="upgrades-section">
+        <h2>Delorean Upgrades</h2>
+        <div id="upgrades">
+            <div>
+                <div class="upgrades-container">
+                    <img src="../images/upgrades/flux-cap.png" alt="Flux">
+                </div>
+                <p>Flux Capacitor</p>
+            </div>
+            <div>
+                <div class="upgrades-container">
+                    <img src="../images/upgrades/flame.jpg" alt="Flame">
+                </div>
+                <p>Flame Decals</p>
+            </div>
+            <div>
+                <div class="upgrades-container">
+                    <img src="../images/upgrades/bumper_sticker.jpg" alt="Bumper">
+                </div>
+                <p>Bumper Stickers</p>
+            </div>
+            <div>
+                <div class="upgrades-container">
+                    <img src="../images/upgrades/hub-cap.jpg" alt="Hub">
+                </div>
+                <p>Hub Caps</p>
+            </div>
+        </div>
+
+    </div>
+</div>
