--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,9 @@
-<nav>
-    <lu>
+<nav id="navigation">
+    <ul>
         <li>Home</li>
         <li>Custom</li>
         <li>Sedan</li>
         <li>SUV</li>
         <li>Truck</li>
-    </lu>
+    </ul>
 </nav>
