--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -141,6 +141,87 @@ h1 {
   text-align: center;
   margin: 4%;
 }
+/************************/
+/* Style for inventory */
+/***********************/
+
+#inv-display {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  text-align: center;
+}
+#inv-display img {
+  width: 160px;
+  height: 90px;
+  border-radius: 16px;
+}
+#inv-display li {
+  gap: 5%;
+  margin: 5%;
+  border-radius: 16px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 5px;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+#inv-display hr {
+  border: none;
+  height: 3px;
+  background-color: black;
+}
+#inv-display h2,
+#inv-display span {
+  font-size: medium;
+}
+
+/**************************
+******* ERROR PAGE ********
+***************************/
+
+.error-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 70vh;
+  background: #f9f9f9;
+}
+
+.error-card {
+  background: white;
+  padding: 2rem 3rem;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  max-width: 500px;
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+.error-title {
+  font-size: 3rem ;
+  color: #d9534f;
+  margin-bottom: 1rem;
+}
+
+.error-message {
+  font-size: 1.2rem;
+  color: #555;
+  margin-bottom: 2rem;
+}
+
+.error-button {
+  display: inline-block;
+  background: var(--colorBlack);
+  color: white;
+  text-decoration: none;
+  padding: 0.8rem 1.5rem;
+  border-radius: 6px;
+  transition: background 0.3s;
+}
+
+.error-button:hover {
+  background: #025aa5;
+}
 
 @media (min-width: 800px) {
   body {
@@ -205,5 +286,21 @@ h1 {
   #upgrades-section {
     grid-column: 1/3;
     grid-row: 1/2;
+  }
+  #inv-display {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+  #inv-display img {
+    width: 210px;
+    height: 120px;
+  }
+  #inv-display h2,
+  #inv-display span {
+    font-size: x-large;
+  }
+  #inv-display li:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   }
 }
