--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -2,6 +2,6 @@
   <div class="error-card">
     <h1 class="error-title"><%= title %></h1>
     <p class="error-message"><%= message %></p>
-    <a href="/" class="error-button">Volver al inicio</a>
+    <a href="/" class="error-button">Back to Main</a>
   </div>
 </div>
