--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <h1>Welcome to the CSE Motors!</h1>
+<%- messages() %>
 <img src="../images/vehicles/delorean.jpg" alt="Hero-img" id="hero-img">
 <div id="hero-text">
     <h3>DMC Delorean</h3>
