--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,7 +55,7 @@ a {
 
 #navigation li {
   display: inline;
-  padding: 3%;
+  padding: 2%;
 }
 #navigation li a {
   color: var(--colorWhite);
@@ -268,6 +268,15 @@ form {
   border-radius: 8px;
   background-color: #0397c4;
 }
+
+#inv_description {
+  width: 100%;
+  height: 80px;
+  resize: vertical;
+  padding: 10px;
+  font-size: 1rem;
+}
+
 label {
   display: block;
   margin-top: 10px;
