--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -12,11 +12,11 @@
 <form action="/account/register" method="POST">
     <fieldset>
         <label for="account_firstname">First Name:</label>
-        <input type="text" id="account_firstname" name="account_firstname" required />
+        <input type="text" id="account_firstname" name="account_firstname" required value="<%= locals.account_firstname %>"/>
         <label for="account_lastname">Last Name:</label>
-        <input type="text" id="account_lastname" name="account_lastname" required />
+        <input type="text" id="account_lastname" name="account_lastname" required value="<%= locals.account_lastname %>"/>
         <label for="account_email">Email Address:</label>
-        <input type="email" id="account_email" name="account_email" placeholder="Enter a valid email address"  pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"/>
+        <input type="email" id="account_email" name="account_email" placeholder="Enter a valid email address"  pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" value="<%= locals.account_email %>"/>
         <label for="account_password">Password:</label>
         <input type="password" id="account_password" name="account_password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$" title="Debe tener al menos 12 caracteres, incluir una mayúscula, un número y un carácter especial.">
         <p>
