unit 5 activity auth

--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -6,3 +6,13 @@
     <li><a  href="/inv/add-classification">Add New Classification</a></li>
     <li><a href="/inv/add-inventory">Add Inventory</a></li>
 </ul>
+
+<h2>Manege Inventory</h2>
+<p>Choose a classification to see those inventory item</p>
+<%- classificationSelect %>
+
+<table id="inventoryDisplay"></table>
+
+<noscript>Javascript must be enable to see this page</noscript>
+
+<script src="../../js/inventory.js"></script>
