--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,12 @@
     <span class="siteName">
         <a href="/" title="return to home page"> CSE Motors</a>
     </span>
-    <div id="tools">
-        <a href="/account/login" title="Click to log in">My account</a>
-    </div>
+     <div id="tools">
+    <% if (loggedIn) { %>
+      <span>Welcome <a href="/account/logged"><%= account_firstname %></a></span>
+      <a href="/account/logout" title="Click to log out">Logout</a>
+    <% } else { %>
+      <a href="/account/login" title="Click to log in">My Account</a>
+    <% } %>
+  </div>
 </header>
