--- a/views/account/logged.ejs
+++ b/views/account/logged.ejs
@@ -1,13 +1,9 @@
 <h1><%= title %></h1>
-<h2>Welcome logged in.</h2>
-<% if (notice && notice.length > 0) { %>
-  <ul>
-    <% notice.forEach(function(msg) { %>
-      <li><%= msg %></li>
-    <% }) %>
-  </ul>
-<% } %>
 
-<ul>
-    <li><a href="/">Edit Acount Information</a></li>
-</ul>
+<h2>Welcome <%= account_firstname %></h2>
+<p><a href="/account/update">Update Account Information</a></p>
+
+<% if (account_type === "Employee" || account_type === "Admin") { %>
+  <h3>Inventory Management</h3>
+  <p><a href="/inv">Go to Inventory Management</a></p>
+<% } %>
